--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,10 +86,10 @@ test = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/mrowaisabdullah/ai-book"
-Documentation = "https://mrowaisabdullah.github.io/ai-book/"
-Repository = "https://github.com/mrowaisabdullah/ai-book.git"
-"Bug Tracker" = "https://github.com/mrowaisabdullah/ai-book/issues"
+Homepage = "https://github.com/mrowaisabdullah/ai-humanoid-robotics"
+Documentation = "https://mrowaisabdullah.github.io/ai-humanoid-robotics/"
+Repository = "https://github.com/mrowaisabdullah/ai-humanoid-robotics.git"
+"Bug Tracker" = "https://github.com/mrowaisabdullah/ai-humanoid-robotics/issues"
 
 [project.scripts]
 rag-server = "rag.main:main"
