--- a/package.json
+++ b/package.json
@@ -20,14 +20,16 @@
     "@docusaurus/core": "3.9.2",
     "@docusaurus/preset-classic": "3.9.2",
     "@mdx-js/react": "^3.0.0",
-    "@openai/chatkit-react": "^1.3.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "clsx": "^2.0.0",
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.556.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^16.1.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@docusaurus/faster": "^3.9.2",
