--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "declaration": true,
-    "outDir": "./dist",
-    "rootDir": "./src"
+    "outDir": "./dist"
   },
   "include": [
     "src/**/*",
