--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,10 @@ backoff>=2.2.1
 psutil>=5.9.6
 # ChatKit Python SDK
 openai-chatkit>=0.1.0
+
+# Authentication dependencies
+sqlalchemy>=2.0.0
+alembic>=1.12.0
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4
+authlib>=1.2.1
