--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 
 # OpenAI Configuration
 OPENAI_API_KEY=your_openai_api_key_here
-OPENAI_MODEL=gpt-4-turbo-preview
+OPENAI_MODEL=gpt-4.1-nano
 OPENAI_EMBEDDING_MODEL=text-embedding-3-small
 
 # Qdrant Configuration
