--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -32,6 +32,13 @@ dependencies = [
     "uvicorn[standard]>=0.27.0",
     "pydantic>=2.5.3",
     "pydantic-settings>=2.1.0",
+    # Database
+    "sqlalchemy>=2.0.0",
+    "alembic>=1.12.0",
+    # Authentication
+    "python-jose[cryptography]>=3.3.0",
+    "passlib[bcrypt]>=1.7.4",
+    "authlib>=1.2.1",
     # OpenAI Integration
     "openai>=1.6.1",
     "tiktoken>=0.5.2",
