--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
     "python-jose[cryptography]>=3.3.0",
     "passlib[bcrypt]>=1.7.4",
     "authlib>=1.2.1",
+    "itsdangerous>=2.1.0",
     # OpenAI Integration
     "openai>=1.6.1",
     "tiktoken>=0.5.2",
