--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-fastapi>=0.109.0
+fastapi>=0.68.0,<0.109.0
+gradio>=4.0.0
 uvicorn[standard]>=0.27.0
 pydantic>=2.5.3
 pydantic-settings>=2.1.0
@@ -24,3 +25,4 @@ alembic>=1.12.0
 python-jose[cryptography]>=3.3.0
 passlib[bcrypt]>=1.7.4
 authlib>=1.2.1
+itsdangerous>=2.1.0
