--- a/.env.example
+++ b/.env.example
@@ -40,3 +40,22 @@ HEALTH_CHECK_INTERVAL=30
 
 # Frontend Configuration (React)
 REACT_APP_CHAT_API_URL=https://mrowaisabdullah-ai-humanoid-robotics.hf.space/chat
+
+# Authentication Configuration
+SECRET_KEY=your_jwt_secret_key_here_use_at_least_32_characters
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=10080
+
+# Email Configuration (for password resets)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your_email@gmail.com
+SMTP_PASSWORD=your_app_password
+EMAIL_FROM=noreply@yourdomain.com
+EMAIL_FROM_NAME=AI Book App
+
+# Database Configuration
+DATABASE_URL=sqlite:///./app.db
+
+# Frontend URL (for email links and redirects)
+FRONTEND_URL=http://localhost:3000
