--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,8 @@ aiofiles>=23.2.1
 slowapi>=0.1.9
 limits>=3.13.1
 python-multipart>=0.0.6
+aiosmtplib>=3.0.0
+jinja2>=3.1.0
 python-dotenv>=1.0.0
 structlog>=23.2.0
 backoff>=2.2.1
