--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "axios": "^1.6.0",
     "clsx": "^2.0.0",
+    "react-hook-form": "^7.48.2",
+    "@hookform/resolvers": "^3.3.4",
+    "zod": "^3.22.4",
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.556.0",
     "prism-react-renderer": "^2.3.0",
