fix: Remove binary database file and implement auto-initialization for Hugging Face Spaces
- Remove database/auth.db from git tracking (binary file blocking deployment)
- Update .gitignore to exclude all database files (*.db, *.sqlite)
- Create init_database.py script for automatic database initialization
- Create start_server.py wrapper script for deployment
- Update Dockerfile to use the new startup script
- Enhance main.py to ensure database directory exists on startup

This fixes the Hugging Face Spaces deployment issue by ensuring the database
is created on-demand instead of being committed to the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,11 @@ venv.bak/
 # Testing
 playwright-report/
 test-results/
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+backend/database/*.db
+backend/database/*.sqlite
+backend/database/*.sqlite3
