--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,8 +64,9 @@ dependencies = [
     "openai-chatkit>=1.4.0",
     "email-validator>=2.3.0",
     "bcrypt==4.2.0",
-    "google-generativeai>=0.8.5",
+    "google-genai>=0.3.0",
     "redis>=7.1.0",
+    "python-json-logger>=4.0.0",
 ]
 
 [project.optional-dependencies]
