--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ tiktoken>=0.5.2
 qdrant-client>=1.7.0
 httpx>=0.26.0
 aiohttp>=3.8.0
+# OpenAI Agents SDK with Gemini support
+openai-agents>=0.15.0
 aiofiles>=23.2.1
 slowapi>=0.1.9
 limits>=3.13.1
@@ -27,6 +29,7 @@ sqlalchemy>=2.0.0
 alembic>=1.12.0
 python-jose[cryptography]>=3.3.0
 passlib[bcrypt]>=1.7.4
+bcrypt==4.0.1
 authlib>=1.2.1
 itsdangerous>=2.1.0
 
@@ -35,3 +38,5 @@ redis[hiredis]>=5.0.0
 
 # Google Generative AI for Gemini integration
 google-generativeai>=0.8.0
+# OpenAI Agents SDK with Gemini support
+openai-agents[litellm]
