feat: Implement user profile management with modal and context API
- Added ProfileModal component for user profile settings with form validation using react-hook-form and zod.
- Integrated user preferences including notification settings and chat configurations.
- Created AuthContext for managing authentication state, including login, registration, and profile updates.
- Developed auth API service for handling requests related to user authentication and profile management.
- Defined TypeScript types for user data, preferences, and authentication responses.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,32 +1,26 @@
 # ============================================
-# Environment Configuration
+# AI Book Backend Environment Configuration
 # ============================================
+# Copy this file to .env and update with your values
+# ============================================
+
 # Environment: development, testing, staging, production
 ENVIRONMENT=development
 DEBUG=true
 
 # ============================================
-# Google OAuth Configuration
-# ============================================
-GOOGLE_CLIENT_ID=your-google-client-id
-GOOGLE_CLIENT_SECRET=your-google-client-secret
-# For production:
-# AUTH_REDIRECT_URI=https://your-hf-space.hf.space/backend/auth/google/callback
-# FRONTEND_URL=https://your-username.github.io/your-repo
-AUTH_REDIRECT_URI=http://localhost:3000/auth/google/callback
-FRONTEND_URL=http://localhost:3000
-
-# ============================================
-# JWT Configuration
-# ============================================
-JWT_SECRET_KEY=your-super-secret-jwt-key-at-least-32-characters-long
-JWT_ALGORITHM=HS256
-JWT_EXPIRE_MINUTES=10080  # 7 days
-
-# ============================================
 # Database Configuration
 # ============================================
-DATABASE_URL=sqlite:///./database/auth.db
+# For development (SQLite)
+DATABASE_URL=sqlite+aiosqlite:///./database/auth.db
+
+# For production (PostgreSQL with asyncpg)
+# DATABASE_URL=postgresql+asyncpg://username:password@localhost:5432/ai_book
+
+# For production with Neon (recommended)
+# DATABASE_URL=postgresql+asyncpg://username:password@ep-name.region.aws.neon.tech/dbname?sslmode=require
+
+# Database connection pool settings
 DB_POOL_SIZE=5
 DB_MAX_OVERFLOW=10
 DB_POOL_TIMEOUT=30
@@ -34,75 +28,84 @@ DB_POOL_RECYCLE=3600
 DB_AUTO_MIGRATE=true
 
 # ============================================
-# Gemini API Configuration (for OpenAI SDK)
+# JWT Authentication Configuration
 # ============================================
-GEMINI_API_KEY=your-gemini-api-key
-GEMINI_BASE_URL=https://generativelanguage.googleapis.com/v1beta/openai/
-GEMINI_MODEL=gemini-2.0-flash-lite
-GEMINI_TIMEOUT=60
-GEMINI_MAX_RETRIES=3
-GEMINI_RETRY_DELAY=1.0
-GEMINI_HTTP2=true
-GEMINI_RPM=60
-GEMINI_RPH=1000
+# IMPORTANT: Generate a strong, random secret key for production!
+# Use: openssl rand -base64 32
+JWT_SECRET_KEY=your-super-secure-jwt-secret-key-at-least-32-characters-long
+JWT_ALGORITHM=HS256
+JWT_EXPIRE_MINUTES=10080  # 7 days
+JWT_REFRESH_EXPIRE_DAYS=30
+
+# Session configuration
+SESSION_EXPIRE_MINUTES=10080  # 7 days
+SESSION_COOKIE_NAME=session_id
+SESSION_COOKIE_SECURE=false  # Set to true in production with HTTPS
+SESSION_COOKIE_HTTPONLY=true
+SESSION_COOKIE_SAMESITE=lax
 
 # ============================================
-# OpenRouter API Configuration (Fallback)
+# Email Service Configuration
 # ============================================
-# Get your API key from https://openrouter.ai/keys
-OPENROUTER_API_KEY=your-openrouter-api-key
-OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
-OPENROUTER_MODEL=meta-llama/llama-3.2-3b-instruct:free
-OPENROUTER_TIMEOUT=60
-OPENROUTER_MAX_RETRIES=3
+# Email provider: resend, smtp
+EMAIL_SERVICE=smtp
+
+# Resend Configuration (recommended)
+# Get API key from https://resend.com/api-keys
+RESEND_API_KEY=re_your_resend_api_key_here
+
+# SMTP Configuration (alternative)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_TLS=true
+SMTP_USER=your-email@gmail.com
+SMTP_PASSWORD=your-app-password
+
+# Email settings
+EMAIL_FROM_NAME=AI Book
+EMAIL_FROM_ADDRESS=noreply@yourdomain.com
 
 # ============================================
-# OpenAI Agents SDK Configuration
+# OAuth Provider Configuration
 # ============================================
-OPENAI_AGENTS_ENABLED=true
-OPENAI_AGENTS_TRACING=false
-OPENAI_AGENTS_VERBOSE=false
-AGENT_DEFAULT_TEMPERATURE=0.3
-AGENT_MAX_TOKENS=2048
-AGENT_MAX_TURNS=5
-AGENT_HTML_TOOL=true
-AGENT_CODE_TOOL=true
-AGENT_QUALITY_TOOL=true
-AGENT_QUALITY_CHECK=true
-AGENT_CONFIDENCE_THRESHOLD=0.8
+# Google OAuth 2.0
+# Get credentials from https://console.developers.google.com/
+GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+
+# GitHub OAuth
+# Get credentials from https://github.com/settings/applications/new
+GITHUB_CLIENT_ID=your-github-client-id
+GITHUB_CLIENT_SECRET=your-github-client-secret
+
+# OAuth URLs
+AUTH_REDIRECT_URI=http://localhost:3000/auth/callback
+FRONTEND_URL=http://localhost:3000
 
 # ============================================
-# Legacy OpenAI Configuration (for RAG)
+# Security Configuration
 # ============================================
-OPENAI_API_KEY=your-openai-api-key
-OPENAI_MODEL=gpt-4.1-nano
-OPENAI_EMBEDDING_MODEL=text-embedding-3-small
+# CORS origins (comma-separated)
+CORS_ORIGINS=http://localhost:3000,http://localhost:8080,http://localhost:5173
+CORS_METHODS=GET,POST,PUT,DELETE,OPTIONS
+CORS_HEADERS=*
 
-# ============================================
-# Cache Configuration
-# ============================================
-CACHE_BACKEND=memory
-CACHE_DEFAULT_TTL=168
-CACHE_HIGH_QUALITY_TTL=720
-CACHE_LOW_QUALITY_TTL=24
-REDIS_URL=redis://localhost:6379
-REDIS_PREFIX=translation:
-REDIS_MAX_CONNECTIONS=10
-CACHE_MEMORY_MAX_SIZE=1000
-CACHE_CLEANUP_INTERVAL=3600
-
-# ============================================
-# Rate Limiting Configuration
-# ============================================
+# Rate limiting
 RATE_LIMIT_ENABLED=true
 RATE_LIMIT_RPM=60
 RATE_LIMIT_RPH=1000
-RATE_LIMIT_RPD=10000
-TRANSLATION_RPM=10
-TRANSLATION_RPH=500
-RATE_LIMIT_BLOCK_DURATION=3600
-RATE_LIMIT_WARNING_THRESHOLD=0.8
-RATE_LIMIT_REDIS=false
+
+# Password requirements
+PASSWORD_MIN_LENGTH=8
+PASSWORD_REQUIRE_UPPERCASE=true
+PASSWORD_REQUIRE_LOWERCASE=true
+PASSWORD_REQUIRE_NUMBERS=true
+PASSWORD_REQUIRE_SPECIAL=true
+
+# Email verification settings
+EMAIL_VERIFICATION_REQUIRED=true
+EMAIL_VERIFICATION_EXPIRE_MINUTES=1440  # 24 hours
+PASSWORD_RESET_EXPIRE_MINUTES=60  # 1 hour
 
 # ============================================
 # API Configuration
@@ -112,96 +115,77 @@ API_PORT=7860
 LOG_LEVEL=INFO
 
 # ============================================
-# CORS Configuration
+# OpenAI Configuration
 # ============================================
-CORS_ORIGINS=http://localhost:3000,http://localhost:8080,https://mrowaisabdullah.github.io,https://huggingface.co
-CORS_METHODS=GET,POST,PUT,DELETE
-CORS_HEADERS=*
+OPENAI_API_KEY=sk-your-openai-api-key-here
+OPENAI_MODEL=gpt-3.5-turbo
+OPENAI_EMBEDDING_MODEL=text-embedding-3-small
+
+# OpenRouter Configuration (fallback)
+OPENROUTER_API_KEY=sk-or-v1-your-openrouter-key
+OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
+OPENROUTER_MODEL=meta-llama/llama-3.2-3b-instruct:free
 
 # ============================================
-# Security Configuration
+# Cache Configuration
 # ============================================
-SECURITY_REQUIRE_API_KEY=false
-SECURITY_API_KEY_HEADER=X-API-Key
-SECURITY_MAX_TEXT_LENGTH=100000
-SECURITY_MAX_CHUNKS=100
-SECURITY_CONTENT_FILTER=true
-SECURITY_BLOCKED_PATTERNS=
-SECURITY_IP_WHITELIST=
-SECURITY_IP_BLACKLIST=
+CACHE_BACKEND=memory
+REDIS_URL=redis://localhost:6379
+REDIS_PREFIX=ai_book:
+CACHE_DEFAULT_TTL=3600  # 1 hour
+CACHE_MEMORY_MAX_SIZE=1000
 
 # ============================================
-# Logging Configuration
-# ============================================
-LOG_FILE_ENABLED=true
-LOG_FILE_PATH=logs/translation.log
-LOG_FILE_ROTATION=1 day
-LOG_FILE_RETENTION=30 days
-LOG_MAX_FILE_SIZE=100 MB
-LOG_JSON_FORMAT=false
-LOG_INCLUDE_REQUEST_ID=true
-LOG_FILTER_SENSITIVE=true
-SENSITIVE_FIELDS=api_key,password,token,authorization
-
-# ============================================
-# Monitoring Configuration
-# ============================================
-MONITORING_ENABLED=true
-METRICS_ENDPOINT=/metrics
-METRICS_PORT=9090
-HEALTH_ENDPOINT=/health
-HEALTH_DETAILED=true
-TRACK_PERFORMANCE=true
-SLOW_QUERY_THRESHOLD=1000
-TRACK_ERRORS=true
-ERROR_SAMPLE_RATE=1.0
-
-# External Monitoring
-SENTRY_DSN=
-PROMETHEUS_GATEWAY=
-
-# ============================================
-# Qdrant Configuration (for RAG)
+# Vector Database (Qdrant)
 # ============================================
 QDRANT_URL=http://localhost:6333
 QDRANT_API_KEY=your-qdrant-api-key-if-needed
 
 # ============================================
-# Content Configuration (for RAG)
+# Content Configuration
 # ============================================
 BOOK_CONTENT_PATH=./book_content
 CHUNK_SIZE=1000
 CHUNK_OVERLAP=200
 
 # ============================================
-# Conversation Context (for RAG)
+# Chat Configuration
 # ============================================
 MAX_CONTEXT_MESSAGES=3
 CONTEXT_WINDOW_SIZE=4000
 
 # ============================================
-# Ingestion Configuration (for RAG)
+# Monitoring Configuration
 # ============================================
-BATCH_SIZE=100
-MAX_CONCURRENT_REQUESTS=10
+MONITORING_ENABLED=true
+METRICS_ENDPOINT=/metrics
+HEALTH_ENDPOINT=/health
+TRACK_PERFORMANCE=true
+SLOW_QUERY_THRESHOLD=1000
+
+# Sentry error tracking (optional)
+SENTRY_DSN=
 
 # ============================================
-# Health Monitoring
+# Logging Configuration
 # ============================================
-HEALTH_CHECK_INTERVAL=30
-
-# ============================================
-# Proxy Configuration (Optional)
-# ============================================
-HTTP_PROXY=
-HTTPS_PROXY=
+LOG_FILE_ENABLED=true
+LOG_FILE_PATH=logs/app.log
+LOG_FILE_ROTATION=1 day
+LOG_FILE_RETENTION=30 days
+LOG_MAX_FILE_SIZE=100 MB
+LOG_JSON_FORMAT=false
+LOG_INCLUDE_REQUEST_ID=true
+LOG_FILTER_SENSITIVE=true
+SENSITIVE_FIELDS=api_key,password,token,authorization,secret
 
 # ============================================
 # Feature Flags
 # ============================================
-FEATURE_STREAMING=true
-FEATURE_QUALITY_CHECK=true
-FEATURE_CHUNKING=true
-FEATURE_CODE_PRESERVATION=true
-FEATURE_HTML_PRESERVATION=true
-FEATURE_BATCH_TRANSLATION=true
+FEATURE_EMAIL_VERIFICATION=true
+FEATURE_OAUTH_AUTHENTICATION=true
+FEATURE_PASSWORD_RESET=true
+FEATURE_TWO_FACTOR_AUTH=false
+FEATURE_RATE_LIMITING=true
+FEATURE_CHAT_HISTORY=true
+FEATURE_API_DOCS=true  # Enable API docs in development
