--- a/.env.example
+++ b/.env.example
@@ -50,16 +50,50 @@ SECRET_KEY=your_jwt_secret_key_here_use_at_least_32_characters
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=10080
 
-# Email Configuration (for password resets)
+# Email Service Configuration
+EMAIL_SERVICE=smtp
+
+# SMTP Configuration (Gmail - recommended for development)
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
+SMTP_TLS=true
 SMTP_USER=your_email@gmail.com
 SMTP_PASSWORD=your_app_password
+
+# Resend Configuration (recommended for production)
+# Get API key from https://resend.com/api-keys
+# RESEND_API_KEY=re_your_resend_api_key_here
+
+# Email Settings
 EMAIL_FROM=noreply@yourdomain.com
-EMAIL_FROM_NAME=AI Book App
+EMAIL_FROM_NAME=AI Book
+
+# Email Verification & Security
+EMAIL_VERIFICATION_REQUIRED=true
+EMAIL_VERIFICATION_EXPIRE_MINUTES=1440  # 24 hours
+PASSWORD_RESET_EXPIRE_MINUTES=60  # 1 hour
+
+# Session Configuration
+SESSION_EXPIRE_MINUTES=10080  # 7 days
+SESSION_COOKIE_NAME=session_id
+SESSION_COOKIE_SECURE=false  # Set to true in production with HTTPS
+SESSION_COOKIE_HTTPONLY=true
+SESSION_COOKIE_SAMESITE=lax
+
+# Password Requirements
+PASSWORD_MIN_LENGTH=8
+PASSWORD_REQUIRE_UPPERCASE=true
+PASSWORD_REQUIRE_LOWERCASE=true
+PASSWORD_REQUIRE_NUMBERS=true
+PASSWORD_REQUIRE_SPECIAL=true
 
 # Database Configuration
-DATABASE_URL=sqlite:///./app.db
+# For production with Neon PostgreSQL (recommended)
+# Get connection string from https://neon.tech
+DATABASE_URL=postgresql+asyncpg://username:password@ep-xxx.region.aws.neon.tech/ai_book?sslmode=require
+
+# For development (SQLite - NOT recommended for production)
+# DATABASE_URL=sqlite:///./app.db
 
 # Frontend URL (for email links and redirects)
 FRONTEND_URL=http://localhost:3000
