--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -34,7 +34,7 @@ prepend_sys_path = .
 # sourceless = false
 
 # version number format
-version_num_format = %04d
+version_num_format = %%04d
 
 # version path separator; As mentioned above, this is the character used to split
 # version_locations. The default within new alembic.ini files is "os", which uses
@@ -56,7 +56,8 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = sqlite:///./app.db
+# sqlalchemy.url is set dynamically from environment variable
+# sqlalchemy.url = postgresql+psycopg2://user:pass@localhost/dbname
 
 
 [post_write_hooks]
@@ -108,5 +109,5 @@ level = NOTSET
 formatter = generic
 
 [formatter_generic]
-format = %(levelname)-5.5s [%(name)s] %(message)s
-datefmt = %H:%M:%S
+format = %%(levelname)-5.5s [%%(name)s] %%(message)s
+datefmt = %%H:%%M:%%S
