--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -34,6 +34,8 @@ dependencies = [
     "pydantic-settings>=2.1.0",
     # Database
     "sqlalchemy>=2.0.0",
+    "sqlmodel>=0.0.22",
+    "asyncpg>=0.29.0",
     "alembic>=1.12.0",
     # Authentication
     "python-jose[cryptography]>=3.3.0",
@@ -70,6 +72,8 @@ dependencies = [
     "google-genai>=0.3.0",
     "redis>=7.1.0",
     "python-json-logger>=4.0.0",
+    "psycopg2-binary>=2.9.0",
+    "aiosmtplib>=5.0.0",
 ]
 
 [project.optional-dependencies]
